15649
Enhancement request to add support for withDefault and withDefaultValue for mutable maps (move from immutable Map to general Map).

Currently:

{code}
scala> Map(1 -> "b").withDefaultValue("-")
res1: scala.collection.immutable.Map[Int,java.lang.String] = Map((1,b))

scala> collection.mutable.Map(1 -> "b").withDefaultValue("-")
<console>:6: error: value withDefaultValue is not a member of scala.collection.mutable.Map[Int,java.lang.String]
       collection.mutable.Map(1 -> "b").withDefaultValue("-")
                                        ^
{code}

The 2.8.0 comment for withDefault in http://www.scala-lang.org/api/current/scala/collection/immutable/Map.html suggests that withDefault could move to the general map.

See http://scala-programming-language.1934581.n4.nabble.com/withDefault-and-withDefaultValue-for-mutable-maps-tp2528937p2529198.html.
